# lds_www

./: .gitignore  Dockerfile  Procfile  manage.py  pyproject.toml  readme.md  requirements.txt
apps/base/migrations/: 0001_initial.py  0002_advert.py  0003_employee_delete_advert.py  0004_alter_employee_email_alter_employee_intro_and_more.py  0005_alter_employee_image.py  0006_remove_employee_image.py
apps/base/models/: __init__.py  blocks.py  pages.py  snippets.py
apps/gallery/: models.py
apps/gallery/migrations/: 0001_initial.py  0002_alter_gallerylandingpage_header_image_and_more.py  0003_remove_gallerylandingpage_header_image_and_more.py
apps/home/: models.py
apps/home/migrations/: 0002_homepage_intro_text.py  0003_homepage_banner_carousel.py  0004_homepage_preview_thumbnail.py  0005_aboutpage.py  0006_serviceslandingpage.py  0007_delete_serviceslandingpage.py  0008_homepage_content.py  0009_alter_homepage_content.py  0010_alter_homepage_content.py  0011_alter_homepage_content.py  0012_alter_homepage_content.py  0013_alter_homepage_content.py  0014_alter_homepage_content.py  (+56 more)
apps/image_gallery/: apps.py  models.py
apps/services/: models.py
apps/site_settings/: models.py
frontend/: package.json  postcss.config.js  tailwind.config.js
frontend/src/: base.css  blocks.css  cards.css  carousel.css  footer.css  header.css  page.css  styles.css  tout.css
home/: models.py
home/migrations/: 0003_homepage_body_homepage_hero_image.py
lds_www/: wsgi.py
lds_www/settings/: base.py  dev.py  production.py
lds_www/templates/: 404.html  500.html  base.html
(+78 files in other folders)
