[tool.poetry]
name = "lds_www"
version = "0.1.0"
description = "Luna Dental Studio"
authors = ["Ray Luna <leon.luna.ray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
